Fix burger menu overlap mobile

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -756,6 +756,7 @@ footer {
         min-width: 50px;
         position: fixed;
         top: 50px;
+        left: 330px;
         right: 10px;
         z-index: 1001;
 
