--- a/assets/styles/stylesProviders.css
+++ b/assets/styles/stylesProviders.css
@@ -524,6 +524,7 @@ footer {
         position: fixed;
         top: 40px;
         right: 30px;
+        left: 330px;
         z-index: 1001;
     }
 
